margin fix and center text align for contact.html

--- a/styles/index.css
+++ b/styles/index.css
@@ -37,3 +37,10 @@ h1,h2,h3,h4,h5,h6 {
    border-radius: 50%;
    max-width: 30%;
 }
+#infoHead {
+   margin-top: 2em;
+}
+#infoBody {
+   text-align: center;
+   margin-top: 1em;
+}
